--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,83 @@
     font-family:Arial, Helvetica, sans-serif
 }
 
+div.blueHeader {
+    border-top: solid 1px grey;
+    background-color: rgb(0, 0, 148);
+    width: 100vw;
+    margin: 0 auto;
+    height: 150px;
+    text-align: center;
+    position:relative
+}
+
+div.searchBar {
+    /* display:flex; */
+    text-align: left;
+    margin-left: 4vw;
+    /* width: 90vw;
+    justify-content:space-between ; */
+    position:absolute;
+    bottom:10px;
+}
+
+div.menuBar {
+    background-color: rgb(109, 167, 221);
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: white;
+    width: 100vw;
+    flex-flow: row nowrap;
+    //justify-content: space-evenly; 
+    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+div.leftColumn {
+    margin-left: 10px;
+    width: 50vw;
+}
+
+div.rightColumn {
+    float: right
+    width: 50vw;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: large;
+    margin-left: auto;
+    margin-right: 0;
+    text-align: center;
+    padding: 30px;
+    box-sizing:border-box;
+    border: solid 2px black;
+}
+
+img {
+    width: 25vw;
+    margin-left: 5vw;
+}
+
+h2 {
+    margin-left: 5vw;
+    margin-top: 5vw;
+}
+
+span {
+    font-size:small;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+p {
+    font-size: small;
+}
+
+div.page {
+    column-count: 2;
+}
+
+div.extNetwork {
+    margin-top: 10px;
+}
