--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,8 @@ div.rightColumn {
     width: 50vw;
     font-family: 'Courier New', Courier, monospace;
     font-size: large;
-    margin-right: 0;
+    margin-top: 2vw;
+    margin-right: 2vw;
     text-align: left;
     border: solid 0px red;
 }
@@ -94,6 +95,7 @@ div.extNetwork {
 }
 
 img.tom {
-    width: 15vw;
+    width: 11vw;
     border: solid 2px rgb(0, 0, 148);
+    margin-left: 0;
 }
